--- a/src/USSEScoreboard/Views/ScoreEntries/Create.cshtml
+++ b/src/USSEScoreboard/Views/ScoreEntries/Create.cshtml
@@ -1,4 +1,4 @@
-@model USSEScoreboard.Models.PresentationEntry
+@model USSEScoreboard.Models.ScoreEntry
 
 @{
     ViewData["Title"] = "Create";
@@ -8,11 +8,19 @@
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>PresentationEntry</h4>
+        <h4>ScoreEntry</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input asp-for="DateCreated" type="hidden" value="@DateTime.Now" />
         <input asp-for="DateModified" type="hidden" value="@DateTime.Now" />
+
+        <div class="form-group">
+            <label asp-for="ScoreType" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <select asp-for="ScoreType" asp-items="Html.GetEnumSelectList<ScoreEntryType>()" class="form-control"></select>
+                <span asp-validation-for="ScoreType" class="text-danger" />
+            </div>
+        </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Team Member</label>
             <div class="col-md-10">
