--- a/src/USSEScoreboard/Views/ScoreEntries/Delete.cshtml
+++ b/src/USSEScoreboard/Views/ScoreEntries/Delete.cshtml
@@ -1,4 +1,4 @@
-@model USSEScoreboard.Models.PresentationEntry
+@model USSEScoreboard.Models.ScoreEntry
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PresentationEntry</h4>
+    <h4>ScoreEntry</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -22,6 +22,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.DateModified)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ScoreType)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ScoreType)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Total)
