--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -30,12 +30,16 @@
                 </thead>
                 @* Start TE Table *@
 
-                @foreach (UserProfile TeamMember in ViewBag.Team)
+                @foreach (DashboardRow TeamMember in ViewBag.Team)
                 {
                     <tr>
                         <td width="20%">@TeamMember.FullName</td>
                         <td width="16%" class="text-center">
-                            <a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@TeamMember.UserProfileId" class="btn btn-primary btn-xs">2 of 3</a>
+                            <a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@TeamMember.UserProfileId" class="btn btn-primary btn-xs">
+                                @TeamMember.CommitCompleted
+                                of
+                                @TeamMember.CommitTotal
+                            </a>
                         </td>
                         <td class="text-center" width="16%"> 
                             @if (TeamMember.IsCRM)
