--- a/src/USSEScoreboard/Views/Commitments/SearchByUser.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/SearchByUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>All Commitments</h2>
+<h2>Commitments : @Model.SearchUserName</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
