--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -5,17 +5,14 @@
     <h1>SE Scoreboard <small>Do... or do not. There is no try.</small></h1>
 </div>
 
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
-
-@if (SignInManager.IsSignedIn(User))
+@if (User.Identity.IsAuthenticated)
 {
     //Show Dashboard if Logged In
     <div class="container">
-        <div class="col-md-2">
+        @*<div class="col-md-2">
             <img src="~/images/yoda.png" width="160" />
         </div>
-        <div class="col-md-10">
+        <div class="col-md-10">*@
             <!-- start table -->
             <table class="table table-striped table-hover table-bordered">
                 <thead>
@@ -77,7 +74,7 @@
                 </tr>
             </table>
             <!-- end table -->
-        </div>
+        @*</div>*@
     </div>
 
 }
