--- a/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
+++ b/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.DateCreated)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateModified)
+                Name
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ScoreType)
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateModified)
+                @item.UserProfile.FullName
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ScoreType)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Total)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.WeekEnding)
+                @item.WeekEnding.ToString("D")
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ScoreEntryId">Edit</a> |
