--- a/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
+++ b/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
@@ -4,11 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Track Progress</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="container">
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="ResetCRMExpenses" class="btn btn-primary">Reset CRM &amp; Expenses</a>
+</div>
 <table class="table">
     <thead>
         <tr>
