--- a/src/USSEScoreboard/Views/Wigs/Index.cshtml
+++ b/src/USSEScoreboard/Views/Wigs/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 <head>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    @*<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/js/evangelist.js"></script>
-    <script src="~/js/wigCharts.js"></script>
+    <script src="~/js/wigCharts.js"></script>*@
 </head>
 
 
@@ -60,6 +60,6 @@
     </tbody>
 </table>
 
-<div id="community_actual_metric" style="width: 900px; height: 500px;"></div>
+@*<div id="community_actual_metric" style="width: 900px; height: 500px;"></div>
 <div id="ascend_actual_metric" style="width: 900px; height: 500px;"></div>
-<div id="weeks_metric" style="width: 900px; height: 500px;"></div>
+<div id="weeks_metric" style="width: 900px; height: 500px;"></div>*@
