Commitment Create Edit DateCreated WigId

--- a/src/USSEScoreboard/Views/Commitments/Edit.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/Edit.cshtml
@@ -41,6 +41,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="col-md-2 control-label">Towards Wig</label>
+            <div class="col-md-10">
+                <select asp-for="SelectedWigId" asp-items="@(new SelectList(Model.Wigs,"WigId","Title"))" class="form-control"></select>
+                <span asp-validation-for="SelectedWigId" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-md-2 control-label">Team Member</label>
             <div class="col-md-10">
                 <select asp-for="SelectedUserID" asp-items="@(new SelectList(Model.Users,"UserProfileId","FullName"))" class="form-control"></select>
