Reset Completed Commitments

--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -58,8 +58,8 @@
                                 <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
                             } 
                         </td>
-                        <td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalPresentations</a></td>
-                        <td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalAscend</a></td>
+                        <td width="16%" class="text-center"><a href="#" class="badge">-</a>@*@UserScore.TotalPresentations*@</td>
+                        <td width="16%" class="text-center"><a href="#" class="badge">-</a>@*@UserScore.TotalAscend*@</td>
                     </tr>
                 }
 
