--- a/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
+++ b/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
@@ -7,8 +7,9 @@
 <h2>Track Progress</h2>
 
 <div class="container">
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
-    <a asp-action="ResetCRMExpenses" class="btn btn-primary">Reset CRM &amp; Expenses</a>
+    <a asp-action="Create" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Track New Item</a>
+    <a asp-action="ResetCRMExpenses" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Reset CRM &amp; Expenses</a>
+    <a asp-action="ArchiveCommits" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Archive Completed Commits</a>
 </div>
 <table class="table">
     <thead>
