--- a/src/USSEScoreboard/Views/Commitments/My.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/My.cshtml
@@ -25,6 +25,7 @@
         <a class="btn btn-warning" asp-action="ToggleCRM">Toggle CRM</a>
     }
 </div>
+
     <table class="table table-striped">
         <thead>
             <tr>
@@ -44,9 +45,18 @@
                     <td>@item.UserProfile.FullName</td>
                     <td>@item.Status</td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Delete</a>
+                        @if (@item.Status == CommitmentStatus.Active)
+                        {
+
+                            <a asp-action="Complete" asp-route-id="@item.Id" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Mark as Complete</a>
+                        }
+                        else
+                        {
+                            <button disabled class="btn btn-xs"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Mark as Complete</button>
+                        }
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a> 
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Details</a> 
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Delete</a>
 
                     </td>
                 </tr>
