View all Commitments Link

--- a/src/USSEScoreboard/Views/Commitments/My.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/My.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>My Commitments</h2>
+<h2>My Commitments <span class="small">(<a href="/Commitments">View All</a>)</span></h2> 
 
 <div class="container">
     <a asp-action="Create" class="btn btn-primary">New Commitment</a>
