--- a/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
+++ b/src/USSEScoreboard/Views/ScoreEntries/Index.cshtml
@@ -9,7 +9,7 @@
 {
     <div class="alert alert-success" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Success!</strong> CRM and Expenses Reeset
+        <strong>Success!</strong> CRM and Expenses Reeset for all users.
     </div>
 }
 @if (Context.Request.Query["msg"] == "archived")
@@ -19,9 +19,17 @@
         <strong>Success!</strong> Completed Commitments Have Been Archived
     </div>
 }
+@if (Context.Request.Query["msg"] == "resetfri")
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Success!</strong> FRI has been reset for all users.
+    </div>
+}
 <div class="container">
     <a asp-action="Create" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Track New Item</a>
     <a asp-action="ResetCRMExpenses" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Reset CRM &amp; Expenses</a>
+    <a asp-action="ResetFRI" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Reset FRI</a>
     <a asp-action="ArchiveCommits" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Archive Completed Commits</a>
 </div>
 <table class="table">
