--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -18,10 +18,10 @@
                 <thead>
                     <tr>
                         <th style="border-top: 1px solid #fff !important; border-left: 1px solid #fff !important;">&nbsp;</th>
-                        <th class="text-center">Weekly Tasks <a href="/Commitments/My"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a></th>
-                        <th class="text-center">CRM <a href="https://microsoftcorp9.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a></th>
-                        <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a></th>
-                        <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a></th>
+                        <th class="text-center">Weekly Tasks <a href="/Commitments/My"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                        <th class="text-center">CRM <a href="https://microsoftcorp9.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                        <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                        <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                         @*<th class="text-center">Presentations</th>
                         <th class="text-center">Ascend Working</th>*@
                     </tr>
