--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -9,10 +9,7 @@
 {
     //Show Dashboard if Logged In
     <div class="container">
-        @*<div class="col-md-2">
-            <img src="~/images/yoda.png" width="160" />
-        </div>
-        <div class="col-md-10">*@
+        <div class="col-md-8">
             <!-- start table -->
             <table class="table table-striped table-hover table-bordered">
                 <thead>
@@ -31,15 +28,15 @@
                 @foreach (UserScore UserScore in ViewBag.Team)
                 {
                     <tr>
-                        <td width="32%">@UserScore.FullName</td>
-                        <td width="17%" class="text-center">
+                        <td width="28%">@UserScore.FullName</td>
+                        <td width="18%" class="text-center">
                             <a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@UserScore.UserProfileId" class="btn @(UserScore.CommitCompleted == UserScore.CommitTotal && UserScore.CommitCompleted > 0 ? "btn-success" : "btn-primary") btn-xs">
                                 @UserScore.CommitCompleted
                                 of
                                 @UserScore.CommitTotal
                             </a>
                         </td>
-                        <td class="text-center" width="17%"> 
+                        <td class="text-center" width="18%">
                             @if (UserScore.IsCRM)
                             {
                                 <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
@@ -47,9 +44,9 @@
                             else
                             {
                                 <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
-                            }                        
+                            }
                         </td>
-                        <td class="text-center" width="17%">
+                        <td class="text-center" width="18%">
                             @if (UserScore.IsExpenses)
                             {
                                 <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
@@ -57,9 +54,9 @@
                             else
                             {
                                 <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
-                            } 
+                            }
                         </td>
-                        <td class="text-center" width="17%">
+                        <td class="text-center" width="18%">
                             @if (UserScore.IsFRI)
                             {
                                 <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
@@ -67,7 +64,7 @@
                             else
                             {
                                 <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
-                            } 
+                            }
                         </td>
                         @*<td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalPresentations</a></td>
                         <td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalAscend</a></td>*@
@@ -75,19 +72,35 @@
                 }
 
                 @* // End TE Table *@
-                
-                @*<tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="text-center warning"><span style="font-weight:bold;">Totals</span></td>
-                    <td class="text-center warning"><span class="badge">@ViewBag.TotalPresentations</span></td>
-                    <td class="text-center warning"><span class="badge">@ViewBag.TotalAscend</span></td>
-                </tr>*@
 
             </table>
-            <!-- end table -->
-        @*</div>*@
+            <!-- end TE table -->
+        </div>
+        <div class="col-md-4">
+            <!-- start global score panel -->
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    South East Team Totals
+                </div>
+                @*<div class="panel-body">*@
+                    <table class="table table-striped">
+                        <tr>
+                            <td>Total Presentations:</td>
+                            <td><span class="badge">@ViewBag.TotalPresentations</span></td>
+                        </tr>
+                        <tr>
+                            <td>Ascend Active:</td>
+                            <td><span class="badge">@ViewBag.TotalAscendActive</span></td>
+                        </tr>
+                        <tr>
+                            <td>Ascend Complete:</td>
+                            <td><span class="badge">@ViewBag.TotalAscendComplete</span></td>
+                        </tr>
+                    </table>
+                @*</div>*@
+            </div>
+            <!-- end global score panel-->            
+        </div>
     </div>
 
 }
