--- a/src/USSEScoreboard/Views/GlobalScoreEntries/Index.cshtml
+++ b/src/USSEScoreboard/Views/GlobalScoreEntries/Index.cshtml
@@ -4,11 +4,35 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Track Progress</h2>
+@if (Context.Request.Query["msg"] == "reset")
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Success!</strong> CRM and Expenses Reeset for all users.
+    </div>
+}
+@if (Context.Request.Query["msg"] == "archived")
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Success!</strong> Completed Commitments Have Been Archived
+    </div>
+}
+@if (Context.Request.Query["msg"] == "resetfri")
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Success!</strong> FRI has been reset for all users.
+    </div>
+}
+<div class="container">
+    <a asp-action="Create" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Track New Item</a>
+    <a asp-action="ResetCRMExpenses" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Reset CRM &amp; Expenses</a>
+    <a asp-action="ResetFRI" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Reset FRI</a>
+    <a asp-action="ArchiveCommits" class="btn btn-primary"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> Archive Completed Commits</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
