--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -1,86 +1,96 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div class="page-header">
+@*<div class="page-header">
     <h1>SE Scoreboard <small>Do... or do not. There is no try.</small></h1>
-</div>
+</div>*@
 
 @if (User.Identity.IsAuthenticated)
 {
     //Show Dashboard if Logged In
     <div class="container">
         <div class="col-md-8">
-            <!-- start table -->
-            <table class="table table-striped table-hover table-bordered">
-                <thead>
-                    <tr>
-                        <th style="border-top: 1px solid #fff !important; border-left: 1px solid #fff !important;">&nbsp;</th>
-                        <th class="text-center">Weekly Tasks <a href="/Commitments/My"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                        <th class="text-center">CRM <a href="https://microsoftcorp9.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                        <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                        <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                        @*<th class="text-center">Presentations</th>
+            <!-- start panel -->
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <strong>Individual Contributor stats</strong>
+                </div>
+
+                <!-- start table -->
+                <table class="table table-striped table-hover table-bordered" style="background-color: #FFF;">
+                    <thead>
+                        <tr>
+                            <th style="border-top: 1px solid #fff !important; border-left: 1px solid #fff !important;">&nbsp;</th>
+                            <th class="text-center">Weekly Tasks <a href="/Commitments/My"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            <th class="text-center">CRM <a href="https://microsoftcorp9.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            @*<th class="text-center">Presentations</th>
                         <th class="text-center">Ascend Working</th>*@
-                    </tr>
-                </thead>
-                @* Start TE Table *@
+                        </tr>
+                    </thead>
+                    @* Start TE Table *@
 
-                @foreach (UserScore UserScore in ViewBag.Team)
+                    @foreach (UserScore UserScore in ViewBag.Team)
                 {
-                    <tr>
-                        <td width="28%">@UserScore.FullName</td>
-                        <td width="18%" class="text-center">
-                            <a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@UserScore.UserProfileId" class="btn @(UserScore.CommitCompleted == UserScore.CommitTotal && UserScore.CommitCompleted > 0 ? "btn-success" : "btn-primary") btn-xs">
-                                @UserScore.CommitCompleted
-                                of
-                                @UserScore.CommitTotal
-                            </a>
-                        </td>
-                        <td class="text-center" width="18%">
-                            @if (UserScore.IsCRM)
-                            {
-                                <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
-                            }
-                            else
-                            {
-                                <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
-                            }
-                        </td>
-                        <td class="text-center" width="18%">
-                            @if (UserScore.IsExpenses)
-                            {
-                                <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
-                            }
-                            else
-                            {
-                                <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
-                            }
-                        </td>
-                        <td class="text-center" width="18%">
-                            @if (UserScore.IsFRI)
-                            {
-                                <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
-                            }
-                            else
-                            {
-                                <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
-                            }
-                        </td>
-                        @*<td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalPresentations</a></td>
+                        <tr>
+                            <td width="24%">@UserScore.FullName</td>
+                            <td width="19%" class="text-center">
+                                <a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@UserScore.UserProfileId" class="btn @(UserScore.CommitCompleted == UserScore.CommitTotal && UserScore.CommitCompleted > 0 ? "btn-success" : "btn-primary") btn-xs">
+                                    @UserScore.CommitCompleted
+                                    of
+                                    @UserScore.CommitTotal
+                                </a>
+                            </td>
+                            <td class="text-center" width="19%">
+                                @if (UserScore.IsCRM)
+                                {
+                                    <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
+                                }
+                            </td>
+                            <td class="text-center" width="19%">
+                                @if (UserScore.IsExpenses)
+                                {
+                                    <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
+                                }
+                            </td>
+                            <td class="text-center" width="19%">
+                                @if (UserScore.IsFRI)
+                                {
+                                    <button class="btn btn-success btn-xs"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span></button>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></button>
+                                }
+                            </td>
+                            @*<td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalPresentations</a></td>
                         <td width="16%" class="text-center"><a href="#" class="badge">@UserScore.TotalAscend</a></td>*@
-                    </tr>
-                }
+                        </tr>
+                    }
 
-                @* // End TE Table *@
+                    @* // End TE Table *@
 
-            </table>
-            <!-- end TE table -->
+                </table>
+                <!-- end TE table -->
+
+            </div>
+            <!-- end panel -->
+
         </div>
         <div class="col-md-4">
             <!-- start global score panel -->
-            <div class="panel panel-primary">
+            <div class="panel panel-info">
                 <div class="panel-heading">
-                    South East Team Totals
+                    <strong>South East Team Totals</strong>
                 </div>
                 @*<div class="panel-body">*@
                     <table class="table table-striped">
@@ -99,7 +109,36 @@
                     </table>
                 @*</div>*@
             </div>
-            <!-- end global score panel-->            
+            <!-- end global score panel-->       
+            <!-- start trending table -->
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                   <strong>Trending towards... [Inactive]</strong>
+                </div>
+                <div class="panel-body">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                            Presentation
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                            Ascend
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                            <span class="sr-only">60% Complete (warning)</span>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span class="sr-only">80% Complete (danger)</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- start trending table -->     
         </div>
     </div>
 
