--- a/src/USSEScoreboard/Views/Shared/_Layout.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     </environment>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top header-shadow ">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -27,8 +27,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Team South East</a>
+                </button>                
+                <img src="~/images/master-yoda-pink.png" style="width: 110px; float: left;" title="Master Yoda" />
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">South East</a>                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -44,6 +45,7 @@
             </div>
         </div>
     </div>
+    <div style="height: 30px;"></div>
     <div class="container body-content">
         @RenderBody()
         <hr />
