--- a/src/USSEScoreboard/wwwroot/css/site.css
+++ b/src/USSEScoreboard/wwwroot/css/site.css
@@ -48,3 +48,9 @@ textarea {
     display: none
   }
 }
+
+.header-shadow {
+    -webkit-box-shadow: 0px 10px 13px -2px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 10px 13px -2px rgba(0,0,0,0.3);
+    box-shadow: 0px 10px 13px -2px rgba(0,0,0,0.3);
+}
