Added wigs to create commit page

--- a/src/USSEScoreboard/Views/Commitments/Create.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/Create.cshtml
@@ -7,54 +7,77 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <h2>Create</h2>
+<h4>Commitment</h4>
+<hr />
 
-<form asp-action="Create">
-    <div class="form-horizontal">
-        <h4>Commitment</h4>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Title" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger" />
+<div class="container">
+    <div class="col-md-6">
+        <!-- start create -->
+        <form asp-action="Create">
+            <div class="form-horizontal">
+
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Title" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Status" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <select asp-for="Status" asp-items="Html.GetEnumSelectList<CommitmentStatus>()" class="form-control"></select>
+                        <span asp-validation-for="Status" class="text-danger" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-2 control-label">Wig</label>
+                    <div class="col-md-10">
+                        <select asp-for="SelectedWigId" asp-items="@(new SelectList(Model.Wigs,"WigId","Title"))" class="form-control"></select>
+                        <span asp-validation-for="SelectedWigId" class="text-danger" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-2 control-label">Member</label>
+                    <div class="col-md-10">
+                        <select asp-for="SelectedUserID" asp-items="@(new SelectList(Model.Users,"UserProfileId","FullName"))" class="form-control"></select>
+                        <span asp-validation-for="SelectedUserID" class="text-danger" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Description" class="form-control"/>
-                <span asp-validation-for="Description" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Status" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <select asp-for="Status" asp-items="Html.GetEnumSelectList<CommitmentStatus>()" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-2 control-label">Towards Wig</label>
-            <div class="col-md-10">
-                <select asp-for="SelectedWigId" asp-items="@(new SelectList(Model.Wigs,"WigId","Title"))" class="form-control"></select>
-                <span asp-validation-for="SelectedWigId" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-2 control-label">Team Member</label>
-            <div class="col-md-10">
-                <select asp-for="SelectedUserID" asp-items="@(new SelectList(Model.Users,"UserProfileId","FullName"))" class="form-control"></select>
-                <span asp-validation-for="SelectedUserID" class="text-danger" />
-            </div>
-        </div>
-      <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+        </form>
+        <!-- end create -->
     </div>
-</form>
+    <div class="col-md-6">
+
+                <!-- start wigs -->
+                @foreach (Wig w in Model.Wigs)
+                {
+                    <div class="bs-callout bs-callout-primary">
+                        <h4>@w.Title</h4>
+                        @w.Description
+                    </div>
+                }
+                <!-- end wigs-->
+
+    </div>
+</div>
+
+
+
 
 <div>
     <a asp-action="My">Back to My Commitments</a><br/><br />
