WIG Text Entry Fix

--- a/src/USSEScoreboard/Views/Wigs/Create.cshtml
+++ b/src/USSEScoreboard/Views/Wigs/Create.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             <label asp-for="Description" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Description" class="text-danger" />
             </div>
         </div>
