--- a/src/USSEScoreboard/Views/Wigs/Edit.cshtml
+++ b/src/USSEScoreboard/Views/Wigs/Edit.cshtml
@@ -11,18 +11,19 @@
         <h4>Wig</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="WigId" />
+        <input type="hidden" asp-for="WigId" />
+        <input asp-for="DateCreated" type="hidden" />
         <div class="form-group">
-            <label asp-for="DateCreated" class="col-md-2 control-label"></label>
+            <label asp-for="Title" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="DateCreated" class="form-control" readonly />
-                <span asp-validation-for="DateCreated" class="text-danger" />
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Description" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Description" class="text-danger" />
             </div>
         </div>
@@ -33,13 +34,7 @@
                 <span asp-validation-for="Status" class="text-danger" />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Title" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger" />
-            </div>
-        </div>
+
 
         <div class="form-group">
             <label class="col-md-2 control-label">Assigned To</label>
@@ -69,6 +64,7 @@
             </div>
 
         </div>
+    </div>
 </form>
 
 <div>
