Small text changes

--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
             <!-- start global score panel -->
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <strong>South East Team Totals</strong>
+                    <strong>Southeast Team Totals</strong>
                 </div>
                 @*<div class="panel-body">*@
                     <table class="table table-striped">
