--- a/src/USSEScoreboard/Views/Shared/_Layout.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Team South East</title>
+    <title>Team Southeast @*| @ViewData["Title"]*@</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                 </button>                
                 <img src="~/images/master-yoda-white.png" style="width: 110px; float: left;" title="Master Yoda" />
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">South East</a>                
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Southeast</a>                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
